# controller/routes.go
@@ -27,10 +27,19 @@ func RegisterRoutes(r *chi.Mux) {
 
 		r.Get("/systems", GetSystemsHandler)
 		r.Get("/systems/{systemID}", GetSystemByIDHandler)
+		r.Get("/regions/{regionID}/systems", GetSystemsByRegionIDHandler)
 		r.Get("/constellations/{constellationID}/systems", GetSystemsByConstellationIDHandler)
 
 		r.Get("/stargates", GetStargatesHandler)
 		r.Get("/systems/{systemID}/stargates", GetStargateBySystemIDHandler)
+
+		r.Get("/planets", GetPlanetsHandler)
+		r.Get("/planets/{planetID}", GetPlanetByIDHandler)
+		r.Get("/systems/{systemID}/planets", GetPlanetsBySystemIDHandler)
+
+		r.Get("/stations", GetStationsHandler)
+		r.Get("/stations/{stationID}", GetStationByIDHandler)
+		r.Get("/systems/{systemID}/stations", GetStationsBySystemIDHandler)
 
 		r.Get("/reports/spectral-class-counts", GetSpectralClassCountsHandler)
 	})
